fixed CORS for production deployment